[gd_scene load_steps=3 format=3 uid="uid://cb8ui74yxbgpp"]

[ext_resource type="Script" path="res://scenes/levels/title/high_scores_screen/high_scores_screen.gd" id="1_bbihr"]
[ext_resource type="Theme" uid="uid://2rn7o476045t" path="res://scenes/levels/title/high_scores_screen/score_labels_theme.tres" id="2_l2l8a"]

[node name="HighScoresScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbihr")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.5
offset_top = 60.0
offset_right = 111.5
offset_bottom = 118.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "High Scores"

[node name="NewHighestScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.5
offset_top = 131.0
offset_right = 118.5
offset_bottom = 189.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
text = "New high score!"

[node name="NoHighScoresLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.5
offset_top = 131.0
offset_right = 118.5
offset_bottom = 189.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
text = "no high scores yet"

[node name="ScoreLabelsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 222.0
offset_bottom = 568.0
grow_horizontal = 2
theme = ExtResource("2_l2l8a")
